manifests/CiliumNetworkpolicy/k8s network vs cilium network policy.yml
======================================================================
Kubernetes NetworkPolicy: - It selects pods directly using pod labels.
======================================================================
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
==========================================================================================
Cilium network policy - Cilium does not operate directly on pods, it operates on endpoints.
===========================================================================================
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-http
spec:
  endpointSelector:
    matchLabels:
      app: backend
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: GET
          path: /api
